switch to lifecycle events